Update from https://github.com/StephanWells/RTI/commit/d31fa62cdc55381d0131f06813168f46d4638860

--- a/html/stylesheet.css
+++ b/html/stylesheet.css
@@ -2128,6 +2128,18 @@ body {
     margin: 0
 }
 
+details[open] summary {
+    background-color: #22252b;
+}
+
+summary:focus {
+    outline: none !important;
+}
+
+summary:hover {
+    cursor: pointer;
+}
+
 article,
 aside,
 footer,
