Update from https://github.com/StephanWells/RTI/commit/188279640b27b1f2096e25a6ee7aa2ae5dc71b99

--- a/html/collapse.css
+++ b/html/collapse.css
@@ -5,6 +5,9 @@
 .collapse.open > .collapse-header {
   background-color: #22252b
 }
+.collapse.open > .collapse-body {
+  overflow: visible;
+}
 
 .collapse > .collapse-body {
   max-height: 0;
