--- a/html/stylesheet.css
+++ b/html/stylesheet.css
@@ -2445,7 +2445,7 @@ samp * {
 }
 
 blockquote {
-    color: rgba(0, 0, 0, .5);
+    color: rgba(199, 205, 217, .7);
     padding-left: 1.5em;
     border-left: 5px solid rgba(0, 0, 0, .1)
 }
@@ -2527,7 +2527,7 @@ abbr[title] {
 }
 
 img {
-    max-width: 100%
+    max-width: 70%;
 }
 
 .task-list-item {
